# rusty-protocol-v0.1

./: .gitignore  .json  .prettierignore   Cargo.toml  Dockerfile  README.md  backupglobalcargo.txt  backuppoolcargo.txt  license.md  package.json  protocol.rs  testing_guide.md  tsconfig.json  typechain-compiler-config.json
contracts/: .gitignore  Cargo.toml  global.rs  mod.rs
contracts/controllers/: mod.rs
contracts/controllers/deployables/: a_pool.rs  bounty.rs  mod.rs  payment.rs  pool_initiator.rs  reward.rs  reward_initiator.rs  treasury.rs
contracts/controllers/services/: admin.rs  brands.rs  customers.rs  mod.rs
contracts/main/: main.rs
contracts/modules/: mod.rs
contracts/modules/deployables/pool/: Cargo.toml  pool.rs
contracts/modules/deployables/pool_initiator/: Cargo.toml  pool_initiator.rs
contracts/modules/deployables/reward/: Cargo.toml  reward.rs
contracts/modules/deployables/reward_initiator/: Cargo.toml  reward_initiator.rs
contracts/modules/deployables/reward_intitiator/: Cargo.toml  lib.rs
contracts/modules/main/: Cargo.toml  main.rs
contracts/modules/peripherals/bounty/: Cargo.toml  bounty.rs
contracts/modules/peripherals/governance/: Cargo.toml  governance.rs
contracts/modules/peripherals/receiver/: Cargo.toml  receiver.rs
contracts/modules/peripherals/treasury/: Cargo.toml  treasury.rs
contracts/modules/peripherals/votes/: Cargo.toml  votes.rs
contracts/modules/pheripherals/treasury/: Cargo.toml  lib.rs  treasury.rs
contracts/modules/services/admin/: Cargo.toml
contracts/modules/services/brand/: Cargo.toml
contracts/modules/services/customer/: Cargo.toml
contracts/modules/services/oracle/: Cargo.toml  oracle.rs
contracts/modules/services/payment/: Cargo.toml  payment.rs
contracts/modules/services/services/: Cargo.toml  services.rs
contracts/providers/: mod.rs
contracts/providers/common/: constants.rs  context.rs  database.rs  errors.rs  eunice.rs  mod.rs  roleguard.rs  roles.rs  types.rs  validator.rs
contracts/providers/data/: a_pool.rs  a_position.rs  a_reward.rs  bounty.rs  brand.rs  mod.rs  payment.rs  pool_initiator.rs  protocol.rs  reward_initiator.rs  treasury.rs
contracts/providers/deployables/: a_pool.rs  bounty.rs  mod.rs  treasury.rs
contracts/providers/global/: error.rs
contracts/providers/services/: admin.rs  brands.rs  customers.rs  mod.rs  oracle.rs  payment.rs
contracts/services/deployables/pool/: Cargo.toml  pool.rs
contracts/services/deployables/reward/: Cargo.toml  reward.rs
main/: Cargo.toml  main.rs
services/deployables/reward/: Cargo.toml  reward.rs
services/deployables/reward/tests/: unit_test.rs
tests/: a_pool_.rs  bounty.rs  globalSetup.ts  globalTeardown.ts  payment.rs  pool.rs  pool.ts  pool_initiator.rs  reward_.rs  reward_initiator.rs  reward_test.rs  treasury.rs
tests/e2e_tests/: bounty_e2e.ts  governance_e2e.ts  oracle_e2e.ts  payment_e2e.ts  pool_e2e.ts  pool_initiator_e2e.ts  reward_e2e.ts  reward_initiator_e2e.ts  services_e2e.ts  treasury_e2e.ts
tests/e2e_tests/utils/: helpers.ts
tests/e2e_tests_js/: bounty_e2e.ts  oracle_e2e.ts  payment_e2e.ts  pool_e2e.ts  pool_initiator_e2e.ts  reward_e2e.ts  reward_initiator_e2e.ts  treasury_e2e.ts
tests/e2e_tests_js/utils/: chai.ts  constants.ts
tests/e2e_tests_rs/: a_pool.rs
typechain-generated/build-extrinsic/: bounty copy.ts  bounty.ts  governance.ts  oracle.ts  payment copy.ts  payment.ts  pool.ts  pool_initiator.ts  receiver.ts  reward.ts  reward_initiator.ts  services.ts  treasury.ts  votes.ts
typechain-generated/constructors/: bounty copy.ts  bounty.ts  governance.ts  oracle.ts  payment copy.ts  payment.ts  pool.ts  pool_initiator.ts  receiver.ts  reward.ts  reward_initiator.ts  services.ts  treasury.ts  votes.ts
typechain-generated/contract-info/: bounty copy.ts  bounty.ts  governance.ts  oracle.ts  payment copy.ts  payment.ts  pool.ts  pool_initiator.ts  receiver.ts  reward.ts  reward_initiator.ts  services.ts  treasury.ts  votes.ts
typechain-generated/contracts/: bounty copy.ts  bounty.ts  governance.ts  oracle.ts  payment copy.ts  payment.ts  pool.ts  pool_initiator.ts  receiver.ts  reward.ts  reward_initiator.ts  services.ts  treasury.ts  votes.ts
typechain-generated/data/: bounty.json  governance.json  oracle.json  payment copy.json  payment.json  pool.json  pool_initiator.json  receiver.json  reward.json  reward_initiator.json  services.json  treasury.json  votes.json
typechain-generated/event-types/: bounty copy.ts  bounty.ts  governance.ts  oracle.ts  payment copy.ts  payment.ts  pool.ts  pool_initiator.ts  receiver.ts  reward.ts  reward_initiator.ts  services.ts  treasury.ts  votes.ts
typechain-generated/events/: bounty copy.ts  bounty.ts  governance.ts  oracle.ts  payment copy.ts  payment.ts  pool.ts  pool_initiator.ts  receiver.ts  reward.ts  reward_initiator.ts  services.ts  treasury.ts  votes.ts
typechain-generated/mixed-methods/: bounty copy.ts  bounty.ts  governance.ts  oracle.ts  payment copy.ts  payment.ts  pool.ts  pool_initiator.ts  receiver.ts  reward.ts  reward_initiator.ts  services.ts  treasury.ts  votes.ts
typechain-generated/query/: bounty copy.ts  bounty.ts  governance.ts  oracle.ts  payment copy.ts  payment.ts  pool.ts  pool_initiator.ts  receiver.ts  reward.ts  reward_initiator.ts  services.ts  treasury.ts  votes.ts
typechain-generated/tx-sign-and-send/: bounty copy.ts  bounty.ts  governance.ts  oracle.ts  payment copy.ts  payment.ts  pool.ts  pool_initiator.ts  receiver.ts  reward.ts  reward_initiator.ts  services.ts  treasury.ts  votes.ts
typechain-generated/types-arguments/: bounty.ts  governance.ts  oracle.ts  payment copy.ts  payment.ts  pool.ts  pool_initiator.ts  reward_initiator.ts  services.ts  treasury.ts  votes.ts
typechain-generated/types-returns/: governance.ts  oracle.ts  payment copy.ts  payment.ts  pool.ts  pool_initiator.ts  reward_initiator.ts  services.ts  treasury.ts  votes.ts
