[package]
name = "meprotocol"
version = "0.1.0"
authors = ["paul_oamen <paul@myai.life>"]
edition = "2021"

[dependencies]
ink = { version = "4.1.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "3.1.1", default-features = false }
reward = {path = "contracts/modules/deployables/reward", default-features = false }
pool = {path = "contracts/modules/deployables/pool", default-features = false }
global = {path = "contracts", default-features = false}

[dev-dependencies]
rustc-serialize = "0.3"
tempfile = "3.0"
pretty_assertions = "1.1"


[lib]
name = "meprotocol"
path = "protocol.rs"
test = true
crate-type = [
    # Used for normal contract Wasm blobs.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "openbrush/std",
    "reward/std",
    "pool/std",
    "global/std",
]
ink-as-dependency = []


[profile.release]
panic = "abort"
lto = false

[profile.dev]

panic = "abort"
lto = false
overflow-checks = false