[package]
name = "global"
version = "0.1.0"
authors = ["paul_oamen, Adebara_Ayomide <paul@myai.life, ayomideadebarafestus@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }


scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "4.0.0-beta.1", default-features = false, features = ["psp22","ownable","access_control", "psp34", "reentrancy_guard", "pausable"] }


[lib]
name = "global"
path = "global.rs"
# crate-type = [
#     # Used for normal contract Wasm blobs.
#     "rlib",
# ]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "openbrush/std",
]

ink-as-dependency = []

[profile.dev]
codegen-units = 16