[package]
name = "pool_initiator"
version = "0.1.0"
authors = ["paul_oamen, adebara_ayomide <paul@myai.life, adebaraayomidefestus@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

pool ={ path = "../pool" , default-features = false,  features = ["ink-as-dependency"]}
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "4.0.0-beta.1", default-features = false, features = ["access_control", "psp34", "reentrancy_guard"] }
global = {path = "../../../", default-features = false}

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "pool_initiator.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
     # These dependencies
    "openbrush/std",
    "global/std",
    "pool/std"
]
ink-as-dependency = []


[profile.release]
panic = "abort"
lto = false

[profile.dev]

panic = "abort"
lto = false
overflow-checks = false
