[package]
name = "customer"
version = "0.1.0"
authors = ["paul_oamen, adebara_ayomide <paul@myai.life, ayomideadebarafestus@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.1.0", default-features = false }


scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "~3.0.0", default-features = false, features = ["access_control", "psp34", "reentrancy_guard"] }
global = {path = "../../../", default-features = false}

[lib]
name = "customer"
path = "customer.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
   "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "openbrush/std",
    "global/std"
]
ink-as-dependency = []

[profile.release]
panic = "abort"
lto = false

[profile.dev]

panic = "abort"
lto = false
overflow-checks = false